typescript/checker/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity3.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            324,
        ),
        hi: BytePos(
            325,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity3.ts:15:5
   |
15 | var c: C<string>;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            343,
        ),
        hi: BytePos(
            344,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity3.ts:16:5
   |
16 | var d: D<string>;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            362,
        ),
        hi: BytePos(
            363,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity3.ts:17:5
   |
17 | var e: E<string>;
   |     ^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity3.ts
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity3.ts:18:1
   |
18 | c = e;
   | ^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            394,
        ),
        hi: BytePos(
            398,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity3.ts:19:10
   |
19 | var r = c.foo('', '');
   |          ^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            419,
        ),
        hi: BytePos(
            423,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity3.ts:20:11
   |
20 | var r2 = e.foo('', 1);
   |           ^^^^

